# trackmc

./: .gitignore  .gitmodules  CMakeLists.txt  Particle_tests.cpp  README.md
resources/: README.md
tests/: EventGenerator_tests.cpp  GasMixture_tests.cpp  Gas_tests.cpp  InputFile_tests.cpp  InterpolatedGas_tests.cpp  Particle_tests.cpp  TrackSimulator_tests.cpp  Vector3D_tests.cpp  catch_main.cpp
tests/test_data/: test_track.yaml
trackmc/: Constants.h  EventGenerator.cpp  EventGenerator.h  Exceptions.cpp  Exceptions.h  Gas.cpp  Gas.h  GasMixture.cpp  GasMixture.h  InputFile.cpp  InputFile.h  PadPlane.cpp  PadPlane.h  Particle.cpp  Particle.h  TrackSimulator.cpp  TrackSimulator.h  Vector3D.cpp  Vector3D.h  main.cpp
trackmc.xcodeproj/: project.pbxproj
trackmc.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
trackmc.xcodeproj/xcuserdata/josh.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
trackmc.xcodeproj/xcuserdata/josh.xcuserdatad/xcschemes/: trackmc.xcscheme  trackmc_tests.xcscheme  xcschememanagement.plist
